--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "websocket2",
+  "name": "websockets-socket.io",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.x"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"    
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sergiolmm/websocket2.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sergiolmm/websocket2/issues"
-  },
-  "homepage": "https://github.com/sergiolmm/websocket2#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.1",
-    "ws": "^8.13.0"
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
